--- a/appsettings.json
+++ b/appsettings.json
@@ -1,11 +1,14 @@
 {
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft": "Warning",
-            "Microsoft.Hosting.Lifetime": "Information"
-        }
-    },
-    "AllowedHosts": "*",
-    "HostName": "https://localhost:44307/Links/"
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
+    }
+  },
+  "AllowedHosts": "*",
+  "HostName": "http://207.244.249.20/Links/",
+  "ConnectionStrings": {
+    "LinksContext": ""
+  }
 }
