--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "bootstrap": "^4.1.3",
+    "file-saver": "^2.0.5",
     "jquery": "^3.4.1",
     "material-design-icons": "^3.0.1",
     "merge": "^1.2.1",
