--- a/appsettings.json
+++ b/appsettings.json
@@ -9,6 +9,6 @@
   "AllowedHosts": "*",
   "HostName": "http://207.244.249.20/Links/",
   "ConnectionStrings": {
-    "LinksContext": ""
+    "LinksContext": "Server=207.244.249.20;Database=links;User Id=SA;Password=6267928Kj;"
   }
 }
